some alignments made, changes in models and validations,

--- a/views/editproducts.handlebars
+++ b/views/editproducts.handlebars
@@ -3,7 +3,7 @@
 {{#if error}} <span style="color: red;">{{error}}</span> {{/if}}
 {{#if success}} <span style="color: green;">{{success}}</span> {{/if}}
 
-<form method="POST" action="/api/products/edit/{{pname}}?_method=PATCH">
+<form method="POST" action="/api/products/edit/{{pid}}?_method=PATCH">
 
     <div class="form-group">
         <label for="">Product Name</label>
